# 2Q_cache

./: .gitignore  CMakeLists.txt  README.md  makefile  run_tests.sh  test_belady
common/: config.h
hdr/: cache2q.hpp
include/: cache2q.hpp  cache_2q.hpp  cache_belady.hpp  perfect_cache.hpp
src/: main.cpp  main_2q.cpp  main_belady.cpp
tests/: cache_2q_tests.cpp  cache_belady_tests.cpp  cache_tests.cpp
